tests/error/empty_for.gw
// [contains] empty for loop condition
for(;;){}
